project(Blackjack_Project)

set(CMAKE_CXX_STANDARD 20)

add_executable(Blackjack_Project
    main.cpp
    Card.cpp
    Card.h
    Deck.cpp
    Deck.h
    Shoe.cpp
    Shoe.h
    Player.cpp
    Player.h
    Dealer.cpp
    Dealer.h
    Casino.cpp
    Casino.h
    Blackjack.h
    Blackjack.cpp
    CardGame.cpp
    CardGame.h
    Slots.h
    Slots.cpp
    Game.h
    Game.cpp
    Hand.h
    Hand.cpp
    PigDice.h
    PigDice.cpp
    BullCow.h
    BullCow.cpp
    Die.h
    Die.cpp
    DiceGame.h
    DiceGame.cpp
)
